--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    
+    <header>
+        <nav id="navigation">
+            <a href="#" class="menu-item">home</a>
+            <a href="#" class="menu-item">about us</a>
+            <a href="#" class="menu-item">contact</a>
+        </nav>
+        <img src="#" id="poza_fundal" alt="poza fundal"/>
+    </header>
+    <main>
+        <div class="content-item"></div>
+        <div class="content-item"></div>
+        <div class="content-item"></div>
+        <div class="content-item"></div>
+        <div class="content-item"></div>
+    </main>
 </body>
 </html>
