--- a/index.html
+++ b/index.html
@@ -23,5 +23,8 @@
         <div class="content-item"></div>
         <div class="content-item"></div>
     </main>
+    <footer>
+        <p>text</p>
+    </footer>
 </body>
 </html>
