--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="#" class="menu-item">about us</a>
             <a href="#" class="menu-item">contact</a>
         </nav>
-        <img src="#" id="poza_fundal" alt="poza fundal"/>
+        <img src="poza_fundal.jpg" id="poza_fundal" alt="poza fundal"/>
     </header>
     <main>
         <div class="content-item"></div>
