--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <nav id="navigation">
+        <nav id="nav">
             <a href="#" class="menu-item">home</a>
             <a href="#" class="menu-item">about us</a>
             <a href="#" class="menu-item">contact</a>
