--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="#" class="menu-item">about us</a>
             <a href="#" class="menu-item">contact</a>
         </nav>
-        <img src="poza_fundal.jpg" id="poza_fundal" alt="poza fundal"/>
+        <img src="https://content.eturia.ro/images/location/ee19c936-2285-4c73-9122-d08c8db28104/c85d60aa3301c6941b21f93db25b7025/1920x1080.webp" id="poza_fundal" alt="poza fundal"/>
     </header>
     <main>
         <div class="content-item"></div>
