--- a/index.html
+++ b/index.html
@@ -10,18 +10,42 @@
 <body>
     <header>
         <nav id="nav">
-            <a href="#" class="menu-item">home</a>
-            <a href="#" class="menu-item">about us</a>
-            <a href="#" class="menu-item">contact</a>
+            <a href="#" class="menu-item">descopera</a>
+            <a href="#" class="menu-item">calatorie</a>
+            <a href="#" class="menu-item">recomandari</a>
         </nav>
-        <img src="https://content.eturia.ro/images/location/ee19c936-2285-4c73-9122-d08c8db28104/c85d60aa3301c6941b21f93db25b7025/1920x1080.webp" id="poza_fundal" alt="poza fundal"/>
+        <h1>Descopera</h1>
+        <h2>Islanda</h2>
+        
     </header>
     <main>
-        <div class="content-item"></div>
-        <div class="content-item"></div>
-        <div class="content-item"></div>
-        <div class="content-item"></div>
-        <div class="content-item"></div>
+        <article>
+            <h1>Descopera Islanda, un spectacol de lumini si umbre</h1>
+            <p>Islanda este o destinatie cu atat mai incitanta prin natura ei neatinsa, exotica si mistica, 
+                cu gheizere ce se inalta spre cer, cu vulcani activi si campuri de lava, cascade vijelioase,
+                 munti acoperiti de zapada si lacuri magice. Fiordurile, ghetarii si campiile din zonele inalte 
+                 ofera vizitatorilor tot atatea peisaje superbe, intr-o atmosfera de liniste de dincolo de timpuri. 
+                 Tara atrage vizitatori tot timpul anului, nu numai datorita diversitatii si frumusetii peisajelor, 
+                 dar si energiei vitale si a luminilor si umbrelor, care difera de la un sezon la altul si le ofera 
+                 turistilor noi descoperiri la fiecare vizita. In timpul lunilor de iarna, din octombrie pana in aprilie, 
+                 lumina soarelui este aproape inexistenta, lasand locul Aurorei Boreale, un caleidoscop de culori intinse 
+                 pe cerul intunecat al iernii, un fenomen de exceptie care nu trebuie ratat. Insula abunda in activitate 
+                 subterana, iar o mare parte a caldurii geotermale este folosita pentru baile din spa-uri si pentru incalzirea 
+                 caselor, Islanda fiind unul dintre cei mai mari producatori de energie geotermica din lume. Cei care doresc
+                  o vacanta dinamica vor gasi aici activitati pentru toate gusturile: snowmobile, echitatie, expeditii speologice,
+                   catarare, inot, ski, rafting, caiac si excursii pe munte cu jeep-uri adaptate special. Islandezii si-au pastrat
+                    nestirbita mostenirea vikinga, traditiile, istoria si folclorul in pofida dezvoltarii economice si culturale, 
+                    zonele rurale fiind inca dominate de elfi si troli, fiecare regiune avand propriile mituri si legende, multe 
+                    dintre ele amintite prin monumente si placi comemorative.
+            </p>
+        </article>
+        <div class="containers">
+            <div class="content-item"></div>
+            <div class="content-item"></div>
+            <div class="content-item"></div>
+            <div class="content-item"></div>
+            <div class="content-item"></div>
+        </div>
     </main>
     <footer>
         <p>text</p>
