add html content

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         </nav>
         <h1>Descopera</h1>
         <h2>Islanda</h2>
-        
     </header>
     <main>
         <article>
@@ -44,13 +43,38 @@
                 <a href="#" alt="5 zile in Reykjavik">
                     <img src="https://content.eturia.ro/images/product/a8dc9031-4761-46d9-9e2a-8c03098b07a2/f4d037bd3092c3b3d72ed8c087002154/300x200.webp"/>
                 </a>
-                <p>cum sa petreci 5 zile de neuitat in Reykjavik</p>
+                <p>Cum sa petreci 5 zile de neuitat in Reykjavik</p>
             </div>
-            <div class="content-item"></div>
-            <div class="content-item"></div>
-            <div class="content-item"></div>
-            <div class="content-item"></div>
-            <div class="content-item"></div>
+            <div class="content-item">
+                <a href="#" alt="5 zile in Reykjavik">
+                    <img src="https://content.eturia.ro/images/product/a8dc9031-4761-46d9-9e2a-8c03098b07a2/f4d037bd3092c3b3d72ed8c087002154/300x200.webp"/>
+                </a>
+                <p>De ce ne place noua Islanda</p>
+            </div>
+            <div class="content-item">
+                <a href="#" alt="5 zile in Reykjavik">
+                    <img src="https://content.eturia.ro/images/product/a8dc9031-4761-46d9-9e2a-8c03098b07a2/f4d037bd3092c3b3d72ed8c087002154/300x200.webp"/>
+                </a>
+                <p>Cum sa petreci 5 zile de neuitat in Reykjavik</p>
+            </div>
+            <div class="content-item">
+                <a href="#" alt="5 zile in Reykjavik">
+                    <img src="https://content.eturia.ro/images/product/a8dc9031-4761-46d9-9e2a-8c03098b07a2/f4d037bd3092c3b3d72ed8c087002154/300x200.webp"/>
+                </a>
+                <p>Cum sa petreci 5 zile de neuitat in Reykjavik</p>
+            </div>
+            <div class="content-item">
+                <a href="#" alt="5 zile in Reykjavik">
+                    <img src="https://content.eturia.ro/images/product/a8dc9031-4761-46d9-9e2a-8c03098b07a2/f4d037bd3092c3b3d72ed8c087002154/300x200.webp"/>
+                </a>
+                <p>Cum sa petreci 5 zile de neuitat in Reykjavik</p>
+            </div>
+            <div class="content-item">
+                <a href="#" alt="5 zile in Reykjavik">
+                    <img src="https://content.eturia.ro/images/product/a8dc9031-4761-46d9-9e2a-8c03098b07a2/f4d037bd3092c3b3d72ed8c087002154/300x200.webp"/>
+                </a>
+                <p>Cum sa petreci 5 zile de neuitat in Reykjavik</p>
+            </div>
         </div>
     </main>
     <footer>
