--- a/index.html
+++ b/index.html
@@ -55,25 +55,25 @@
                 <a href="#" alt="5 zile in Reykjavik">
                     <img src="https://content.eturia.ro/images/product/a8dc9031-4761-46d9-9e2a-8c03098b07a2/f4d037bd3092c3b3d72ed8c087002154/300x200.webp"/>
                 </a>
-                <p>Cum sa petreci 5 zile de neuitat in Reykjavik</p>
+                <p>Ce iti recomandam</p>
             </div>
             <div class="content-item">
                 <a href="#" alt="5 zile in Reykjavik">
                     <img src="https://content.eturia.ro/images/product/a8dc9031-4761-46d9-9e2a-8c03098b07a2/f4d037bd3092c3b3d72ed8c087002154/300x200.webp"/>
                 </a>
-                <p>Cum sa petreci 5 zile de neuitat in Reykjavik</p>
+                <p>Ce ai de vizitat</p>
             </div>
             <div class="content-item">
                 <a href="#" alt="5 zile in Reykjavik">
                     <img src="https://content.eturia.ro/images/product/a8dc9031-4761-46d9-9e2a-8c03098b07a2/f4d037bd3092c3b3d72ed8c087002154/300x200.webp"/>
                 </a>
-                <p>Cum sa petreci 5 zile de neuitat in Reykjavik</p>
+                <p>Prin ochii nostri</p>
             </div>
             <div class="content-item">
                 <a href="#" alt="5 zile in Reykjavik">
                     <img src="https://content.eturia.ro/images/product/a8dc9031-4761-46d9-9e2a-8c03098b07a2/f4d037bd3092c3b3d72ed8c087002154/300x200.webp"/>
                 </a>
-                <p>Cum sa petreci 5 zile de neuitat in Reykjavik</p>
+                <p>Impresii de calatorie</p>
             </div>
         </div>
     </main>
