--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
         </div>
     </main>
     <footer>
-        <p>text</p>
+        <p class="footer-text"> © Copyright 2023 
+            designed with love by Diana
+        </p>
     </footer>
 </body>
 </html>
