--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
             <div class="content-item">
                 <a href="#" alt="5 zile in Reykjavik">
-                    <img src="https://content.eturia.ro/images/product/a8dc9031-4761-46d9-9e2a-8c03098b07a2/f4d037bd3092c3b3d72ed8c087002154/300x200.webp"/>
+                    <img src="islanda_imagine1.jpg"/>
                 </a>
                 <p>De ce ne place noua Islanda</p>
             </div>
