--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </main>
     <footer>
         <p class="footer-text"> © Copyright 2023 
-            designed with love by Diana
+            designed with &#10084; by Diana
         </p>
     </footer>
 </body>
