--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="containers">
             <div class="content-item">
                 <a href="#" alt="5 zile in Reykjavik">
-                    <img src="https://content.eturia.ro/images/product/a8dc9031-4761-46d9-9e2a-8c03098b07a2/f4d037bd3092c3b3d72ed8c087002154/300x200.webp"/>
+                    <img src="reykjavik.jpg"/>
                 </a>
                 <p>Cum sa petreci 5 zile de neuitat in Reykjavik</p>
             </div>
@@ -59,7 +59,7 @@
             </div>
             <div class="content-item">
                 <a href="#" alt="5 zile in Reykjavik">
-                    <img src="https://content.eturia.ro/images/product/a8dc9031-4761-46d9-9e2a-8c03098b07a2/f4d037bd3092c3b3d72ed8c087002154/300x200.webp"/>
+                    <img src="cascada.jpg"/>
                 </a>
                 <p>Ce ai de vizitat</p>
             </div>
@@ -71,7 +71,7 @@
             </div>
             <div class="content-item">
                 <a href="#" alt="5 zile in Reykjavik">
-                    <img src="https://content.eturia.ro/images/product/a8dc9031-4761-46d9-9e2a-8c03098b07a2/f4d037bd3092c3b3d72ed8c087002154/300x200.webp"/>
+                    <img src="circle.jpg"/>
                 </a>
                 <p>Impresii de calatorie</p>
             </div>
