add css and html for reykjavik

--- a/reykjavik.html
+++ b/reykjavik.html
@@ -8,6 +8,82 @@
     <link rel="stylesheet" href="reykjavik.css"/>
 </head>
 <body>
+    <div class="wrapper">
+        <header>
+            <nav>
+                <a href="index.html" class="menu-item">acasa</a>
+                <a href="#" class="menu-item">descopera</a>
+                <a href="#" class="menu-item">contact</a>
+            </nav>
+        </header>
+        <main>
+            <h1>Islanda - cum sa petreci 5 zile de neuitat in Reykjavik</h1>
+            <h2>Itinerariul de mai jos se potriveste oricarei excursii cu durata de 4-6 zile
+                 si care are ca destinatie capitala Reykjavik. Daca vii aici vara, 
+                 exista cateva optiuni in plus pentru locuri de vizitat, dar cele ce
+                  urmeaza sunt cele mai importante atractii turistice. Desigur, ele 
+                  sunt numai niste sugestii, iar ordinea lor este aleatoare, in functie
+                  de ceea ce vrei si iti place sa faci.
+            </h2>
+            <p>Zborurile aterizeaza pe Keflavik, singurul aeroport international din Islanda.
+                 Odata coborat din avion, fa prima oprire in duty-free. Daca vrei sa savurezi 
+                 ceva de baut cat timp te afli in oras, acest popas iti va salva niste bani, 
+                 intrucat taxele impuse pe alcool in Islanda, fac ca bautura sa fie foarte scumpa.
+                 Aceste taxe sunt stabilite in functie de procentul de alcool, asa ca vinul si 
+                 berea sunt oarecum neafectate, dar o sticla de vodca de exemplu, care costa 20 
+                 de dolari in duty free, va costa de trei ori mai mult in magazinul de bauturi Vinbudin.
+                  Oricum, nu te astepta ca berea sa fie ieftina, ba dimpotriva.<br><br>
+
+                Dupa ce iti faci stocurile necesare, scoate niste bani de la bancomat
+                 si mergi la biroul de informatii Flybus (langa banda de bagaje) pentru
+                  a cumpara un bilet dus-intors cu destinatia Reykjavik (cu retur la aeroport, 
+                  la sfarsitul calatoriei). Un bilet costa in jur de 3500 kronur (aproximativ 
+                  31 dolari) si nu trebuie cumparat in avans. Autobuzele pleaca la circa 30-40
+                   de minute dupa fiecare aterizare a unui avion.                
+                Ca alternativa, poti lua taxiul pana la senzationalul centru spa geotermal
+                 Blue Lagoon, apoi autobuzul inapoi catre Reykjavik. (vara, Flybus te duce de 
+                 la aeroport la Blue Lagoon, dar cursa nu este operata tot timpul iarna). 
+                 La Blue Lagoon ai posibilitatea de a-ti depozita bagajele.<br><br>
+                 Daca mergi pe cont propriu in Islanda si esti cam stramtorat cu banii, e bine 
+                 sa alegi o pensiune, unde atmosfera e mult mai prietenoasa si unde ai si facilitati
+                  legate de bucatarie. Un astfel de exemplu este Our House, o locatie intima, 
+                  transformata in hostel. Curatenia este cuvantul de ordine aici, paturile sunt
+                   confortabile, iar in bucatarie ai aragaz, cuptor, frigider si cuptor cu microunde.
+                    Conexiunea wireless este gratuita (exista si computer la dispozitia clientilor hostelului),
+                     micul dejun este inclus si exista si o camera comuna plina cu jocuri si DVD-uri.
+                     In locatie exista doua bai si jumatate (cu cazi Jacuzzi si dusuri), care sunt 
+                     la comun pentru aproximativ 8 persoane, curte cu gratar, facilitati pentru 
+                     spalarea rufelor si doua biciclete gratuite, la dispozitia turistilor.
+                     In plus, personalul iti sta mereu la dispozitie pentru a-ti raspunde la intrebari 
+                     si pentru a-ti oferi sugestii legate de ce poti vedea si face in Reykjavik .
+                     Patul in Our House costa 4000 ISK (in jur de 36 de dolari) plus inca 1000 ISK pentru asternut. 
+                     Camera dubla este 12000 ISK (aproximativ 100 dolari). Daca vrei o camera single,
+                      mergi la Pensiunea Sunna, putin mai sus pe aceeasi strada. Ca si la Our House, 
+                      micul dejun si Internetul sunt incluse in pret, baia este comuna si exista si 
+                      facilitati legate de bucatarie, desi atmosfera e mult mai intima.
+                       Pretul camerelor pleaca de la 6700 kronur (in jur de 61 de dolari).<br><br>
+                       Ziua 1:Odata ce te-ai cazat, incepe prin a-ti fixa niste repere. 
+                       Nu exista modalitate mai buna pentru a face asta decat sa te urci
+                        pe puntea de observatie de la Hallgrimskirkja, sau “biserica alba” 
+                        asa cum este cunoscuta de multi. De aici vei vedea aproape tot ce exista 
+                        in oras si atat timp cat poti gasi drumul de acolo la hotel, nu te vei 
+                        rataci niciodata in Reykjavik. Poti intra in biserica si poti lua liftul 
+                        pana in varf, pentru a admira panorama orasului. 
+                        Hallgrimskirkja, biserica-reper a Reykjavikului
+                        Dupa aceea, fa o plimbare pana la sculptura Solfar (calatorul soarelui),
+                         aflata pe faleza si mergi mai departe pana in port, unde poti servi pranzul 
+                         la Icelandic Fish and Chips, sau te poti incalzi cu un castron cu supa 
+                         fierbinte de rac, la Sægreifinn (baronul marii).  De acolo poti merge pana
+                          in centru, treci pe langa cladirea Parlamentului si in imprejurimi pana 
+                          la Radhus, Primaria, unde poti vedea un harta gigantica a Islandei. 
+                          Admira helesteul Tjornin, treci pe langa biroul Primului-ministru si
+                           ia-o in sus catre Bankastraeti, care da in Laugavegur, principala 
+                           artera comerciala. Daca vrei sa faci cumparaturi pentru cina, opreste-te la bacania Bonus.<br><br>
+
+
+            </p>
+        </main>
+    </div>
     
 </body>
 </html>
