--- a/reykjavik.html
+++ b/reykjavik.html
@@ -18,44 +18,38 @@
         </header>
         <main>
             <h1>Islanda - cum sa petreci 5 zile de neuitat in Reykjavik</h1>
-            <h2>Itinerariul de mai jos se potriveste oricarei excursii cu durata de 4-6 zile
-                 si care are ca destinatie capitala Reykjavik. Daca vii aici vara, 
-                 exista cateva optiuni in plus pentru locuri de vizitat, dar cele ce
-                  urmeaza sunt cele mai importante atractii turistice. Desigur, ele 
-                  sunt numai niste sugestii, iar ordinea lor este aleatoare, in functie
-                  de ceea ce vrei si iti place sa faci.
+            <h2>Itinerariul de mai jos se potriveste oricarei excursii cu durata de 4-6 zile si care are ca destinatie 
+                capitala Reykjavik. Daca vii aici vara, exista cateva optiuni in plus pentru locuri de vizitat, dar cele ce
+                urmeaza sunt cele mai importante atractii turistice. Desigur, ele sunt numai niste sugestii, iar ordinea 
+                lor este aleatoare, in functie de ceea ce vrei si iti place sa faci.
             </h2>
-            <p>Zborurile aterizeaza pe Keflavik, singurul aeroport international din Islanda.
-                 Odata coborat din avion, fa prima oprire in duty-free. Daca vrei sa savurezi 
-                 ceva de baut cat timp te afli in oras, acest popas iti va salva niste bani, 
-                 intrucat taxele impuse pe alcool in Islanda, fac ca bautura sa fie foarte scumpa.
-                 Aceste taxe sunt stabilite in functie de procentul de alcool, asa ca vinul si 
-                 berea sunt oarecum neafectate, dar o sticla de vodca de exemplu, care costa 20 
-                 de dolari in duty free, va costa de trei ori mai mult in magazinul de bauturi Vinbudin.
-                  Oricum, nu te astepta ca berea sa fie ieftina, ba dimpotriva.<br><br>
+            <p>Zborurile aterizeaza pe Keflavik, singurul aeroport international din Islanda. Odata coborat din avion, 
+                fa prima oprire in duty-free. Daca vrei sa savurezi ceva de baut cat timp te afli in oras, acest 
+                popas iti va salva niste bani, intrucat taxele impuse pe alcool in Islanda, fac ca bautura sa fie foarte scumpa.
+                Aceste taxe sunt stabilite in functie de procentul de alcool, asa ca vinul si berea sunt oarecum neafectate, 
+                dar o sticla de vodca de exemplu, care costa 20 de dolari in duty free, va costa de trei ori mai mult in
+                magazinul de bauturi Vinbudin. Oricum, nu te astepta ca berea sa fie ieftina, ba dimpotriva.<br><br>
 
-                Dupa ce iti faci stocurile necesare, scoate niste bani de la bancomat
-                 si mergi la biroul de informatii Flybus (langa banda de bagaje) pentru
-                  a cumpara un bilet dus-intors cu destinatia Reykjavik (cu retur la aeroport, 
-                  la sfarsitul calatoriei). Un bilet costa in jur de 3500 kronur (aproximativ 
-                  31 dolari) si nu trebuie cumparat in avans. Autobuzele pleaca la circa 30-40
-                   de minute dupa fiecare aterizare a unui avion.                
-                Ca alternativa, poti lua taxiul pana la senzationalul centru spa geotermal
-                 Blue Lagoon, apoi autobuzul inapoi catre Reykjavik. (vara, Flybus te duce de 
-                 la aeroport la Blue Lagoon, dar cursa nu este operata tot timpul iarna). 
-                 La Blue Lagoon ai posibilitatea de a-ti depozita bagajele.<br><br>
-                 Daca mergi pe cont propriu in Islanda si esti cam stramtorat cu banii, e bine 
-                 sa alegi o pensiune, unde atmosfera e mult mai prietenoasa si unde ai si facilitati
-                  legate de bucatarie. Un astfel de exemplu este Our House, o locatie intima, 
-                  transformata in hostel. Curatenia este cuvantul de ordine aici, paturile sunt
-                   confortabile, iar in bucatarie ai aragaz, cuptor, frigider si cuptor cu microunde.
-                    Conexiunea wireless este gratuita (exista si computer la dispozitia clientilor hostelului),
-                     micul dejun este inclus si exista si o camera comuna plina cu jocuri si DVD-uri.
-                     In locatie exista doua bai si jumatate (cu cazi Jacuzzi si dusuri), care sunt 
-                     la comun pentru aproximativ 8 persoane, curte cu gratar, facilitati pentru 
-                     spalarea rufelor si doua biciclete gratuite, la dispozitia turistilor.
-                     In plus, personalul iti sta mereu la dispozitie pentru a-ti raspunde la intrebari 
-                     si pentru a-ti oferi sugestii legate de ce poti vedea si face in Reykjavik .
+                Dupa ce iti faci stocurile necesare, scoate niste bani de la bancomat si mergi la biroul de informatii
+                Flybus (langa banda de bagaje) pentru a cumpara un bilet dus-intors cu destinatia Reykjavik (cu retur la aeroport, 
+                la sfarsitul calatoriei). Un bilet costa in jur de 3500 kronur (aproximativ 31 dolari) si nu trebuie cumparat in avans. 
+                Autobuzele pleaca la circa 30-40 de minute dupa fiecare aterizare a unui avion.                
+                Ca alternativa, poti lua taxiul pana la senzationalul centru spa geotermal Blue Lagoon, apoi autobuzul inapoi catre Reykjavik. 
+                (vara, Flybus te duce de la aeroport la Blue Lagoon, dar cursa nu este operata tot timpul iarna). 
+                La Blue Lagoon ai posibilitatea de a-ti depozita bagajele.<br><br>
+            </p>   
+            <img src="blue_lagoon.jpg" alt="imagine Blue Lagoon"/>
+            <p>
+                Daca mergi pe cont propriu in Islanda si esti cam stramtorat cu banii, e bine sa alegi o pensiune, unde atmosfera
+                e mult mai prietenoasa si unde ai si facilitati legate de bucatarie. Un astfel de exemplu este Our House, 
+                o locatie intima, transformata in hostel. Curatenia este cuvantul de ordine aici, paturile sunt confortabile, 
+                iar in bucatarie ai aragaz, cuptor, frigider si cuptor cu microunde. Conexiunea wireless este gratuita 
+                (exista si computer la dispozitia clientilor hostelului), micul dejun este inclus si exista si o camera comuna 
+                plina cu jocuri si DVD-uri.
+                In locatie exista doua bai si jumatate (cu cazi Jacuzzi si dusuri), care sunt la comun pentru aproximativ 8 persoane,
+                curte cu gratar, facilitati pentru spalarea rufelor si doua biciclete gratuite, la dispozitia turistilor.
+                In plus, personalul iti sta mereu la dispozitie pentru a-ti raspunde la intrebari si pentru a-ti oferi sugestii 
+                legate de ce poti vedea si face in Reykjavik .
                      Patul in Our House costa 4000 ISK (in jur de 36 de dolari) plus inca 1000 ISK pentru asternut. 
                      Camera dubla este 12000 ISK (aproximativ 100 dolari). Daca vrei o camera single,
                       mergi la Pensiunea Sunna, putin mai sus pe aceeasi strada. Ca si la Our House, 
@@ -69,6 +63,7 @@
                         in oras si atat timp cat poti gasi drumul de acolo la hotel, nu te vei 
                         rataci niciodata in Reykjavik. Poti intra in biserica si poti lua liftul 
                         pana in varf, pentru a admira panorama orasului. 
+            <img src="../biserica_reper.jpg" alt="biserica"/>
                         Hallgrimskirkja, biserica-reper a Reykjavikului
                         Dupa aceea, fa o plimbare pana la sculptura Solfar (calatorul soarelui),
                          aflata pe faleza si mergi mai departe pana in port, unde poti servi pranzul 
@@ -79,6 +74,24 @@
                           Admira helesteul Tjornin, treci pe langa biroul Primului-ministru si
                            ia-o in sus catre Bankastraeti, care da in Laugavegur, principala 
                            artera comerciala. Daca vrei sa faci cumparaturi pentru cina, opreste-te la bacania Bonus.<br><br>
+                           Ziua 2:
+                           O zi minunata pentru activitati in aer liber. Planifica-ti niste scufundari in cele mai limpezi ape din lume, la Silfra in Thingvellir (dar ai grija sa iti iei un costum calduros pentru a face fata temperaturilor scazute din apa) sau calareste un cal islandez. Agentiile de turism se vor ocupa de toate detaliile, inclusiv de preluarea ta, iar multe tururi pot fi combinate pentru a face economie de timp. De exemplu, poti aranja sa faci calarie si sa combini acest lucru cu o excursie la Blue Lagoon sau la Geysir si Gullfoss, doua dintre cele mai populare atractii turistice din tara.
+                           Ziua 3:
+                            Daca ti-ai facut deja prieteni la pensiune sau nu calatoresti singur, imparte costul inchirierii unei masini si mergeti sa faceti turul Golden Circle. Chiar daca ai numai un insotitor, cheltuirea a 100 de dolari pentru inchirierea unei masini cu cutie de viteza automata (inclusiv asigurarea), va fi o operatiune mai avantajoasa decat sa dai 9800 ISK (aproximativ 89 dolari) pentru un tur al Golden Circle. Drumurile pana acolo sunt bine intretinute si daca nu vine vreo furtuna, calatoria va fi chiar placuta. In plus, masina iti ofera libertatea de a opri cand vrei si de a te odihni dupa pofta inimii. Dupa o zi de explorari turistice, s-ar putea sa tanjesti dupa o bere si sa te tenteze un tur al Ölgerðin, cea mai veche berarie din Islanda. Turul Taste the Saga organizat de agentia Gray Line este unul dintre cele mai complete; aici vei afla nu numai lucruri interesante despre istoria bauturii din Islanda, dar si despre cultura acestei activitati. In plus, ai sansa sa degusti cateva tipuri de bere, precum si bauturi traditionale: Applesin, Malt si Brennivin.
+                            Dupa tur, rasfata-te cu o cina savuroasa, inainte de a merge in cateva cluburi din oras. O locatie renumita este Fishmarket, un restaurant elegant care serveste specialitati islandeze, cu influente asiatice – crabii la gratar cu sos chili (3900 ISK, adica in jur de 35  de dolari)  sau langustina de 6900 ISK  de la Vestmannaeyjar. Daca e prea scump pentru tine, exista multe alte locatii ieftine, precum Tapas Barinn, unde poti savura portii mai mici, la preturi si ele mici.
+
+Ziua 4:
+Presupunand ca ai stat ceva mai mult treaz azi-noapte si vrei s-o iei mai incet astazi, ar fi bine sa stai pe langa Reykjavik. Relaxeaza-te intr-una dintre piscinele publice, fa o plimbare cu bicicleta prin oras, daca vremea e frumoasa sau fa niste  cumparaturi in  piata de vechituri Kolaportið, care se organizeaza langa port, la fiecare sfarsit de saptamana. Daca esti in cautarea unui pulover islandez, aici il vei gasi mult mai ieftin decat in magazinele de suveniruri.
+Daca ai bani de cheltuit, cumpara niste haine de calitate de la magazinul 66° North sau mergi in centrul comercial Kringlan. Poti apela la cei de la My Reykjavik, o companie care organizeaza cele mai bune tururi ale orasului. Acestea au loc in fiecare zi in timpul verii si la cerere pe timpul iernii si sunt gratuite.  Dupa-amiaza, fa o vizita in unele dintre muzeele orasului, pentru a invata mai multe despre istoria si cultura acestei tari.  Muzeul 871 +/- Settlement este favoritul multora, iar daca este miercuri, este cea mai buna zi pentru a vizita Casa de Cultura, intrucat intrarea este libera.
+
+Ziua 5:
+Astazi, paraseste din nou orasul si participa la una dintre numeroasele excursii de o zi ce pleaca din Reykjavik. Fa o plimbare pe un ghetar, escaladeaza gheata, mergi pana la vulcanul Eyjafjallyokull, mergi cu o sanie trasa de caini, exploreaza pesterile formate de raurile de lava, mergi cu snowmobilul sau invata sa conduci un Super Jeep pe drumurile acoperite de zapada si peste raurile inghetate.
+Ziua 6:
+Majoritatea zborurilor catre casa pleaca dupa-amiaza din Aeroportul Keflavik. Acesta este mic iar controlul de securitate nu dureaza mult, asa ca 90 de minute inaintea zborului iti sunt suficiente pentru indeplinirea tuturor formalitatilor. Prin urmare, dimineata iti ramane timp pentru a mai vizita ceva in Reykjavik sau sa pentru a iti mai planifica o ultima excursie. Daca nu ai ajuns inca in  Blue Lagoon, mergi in ziua plecarii, inainte de a ajunge la aeroport.
+
+Autobuzele Flybus se iau de la statia BSI, care se afla la 10-15 minute de centrul orasului si ajung chiar la Blue Lagoon. Daca iei autobuzul de la ora 11, vei ajunge acolo la 11.45 si vei avea la dispozitie 2 ore pentru a te relaxa inainte de a te imbarca in autobuzul care pleaca la 14.15 spre Keflavik, ajungand cam cu 2 ore si jumatate inainte de un zbor care pleaca la ora 17 de exemplu. Asta inseamna ca vei avea timp pentru o gustare, pentru a mai cheltui niste bani in duty-free si pentru a te relaxa inainte de zborul spre casa.
+
+
 
 
             </p>
