--- a/reykjavik.html
+++ b/reykjavik.html
@@ -15,6 +15,8 @@
                 <a href="#" class="menu-item">descopera</a>
                 <a href="#" class="menu-item">contact</a>
             </nav>
+            <h1>Descopera</h1>
+            <h2>Reykjavik</h2>
         </header>
         <main>
             <h1>Islanda - cum sa petreci 5 zile de neuitat in Reykjavik</h1>
