move photos in another folder

--- a/index.html
+++ b/index.html
@@ -41,37 +41,37 @@
         <div class="containers">
             <div class="content-item">
                 <a href="reykjavik.html" alt="5 zile in Reykjavik">
-                    <img src="reykjavik.jpg"/>
+                    <img src="../poze_index/reykjavik.jpg"/>
                 </a>
                 <p>Cum sa petreci 5 zile de neuitat in Reykjavik</p>
             </div>
             <div class="content-item">
                 <a href="#" alt="5 zile in Reykjavik">
-                    <img src="islanda_imagine11.jpg"/>
+                    <img src="../poze_index/islanda_imagine11.jpg"/>
                 </a>
                 <p>De ce ne place noua Islanda</p>
             </div>
             <div class="content-item">
                 <a href="#" alt="5 zile in Reykjavik">
-                    <img src="blue_lagoon.jpg"/>
+                    <img src="../poze_index/blue_lagoon.jpg"/>
                 </a>
                 <p>Ce iti recomandam</p>
             </div>
             <div class="content-item">
                 <a href="#" alt="5 zile in Reykjavik">
-                    <img src="cascada.jpg"/>
+                    <img src="../poze_index/cascada.jpg"/>
                 </a>
                 <p>Ce ai de vizitat</p>
             </div>
             <div class="content-item">
                 <a href="#" alt="5 zile in Reykjavik">
-                    <img src="https://content.eturia.ro/images/product/a8dc9031-4761-46d9-9e2a-8c03098b07a2/f4d037bd3092c3b3d72ed8c087002154/300x200.webp"/>
+                    <img src="../poze_index/prin_ochii_nostri.jpg"/>
                 </a>
                 <p>Prin ochii nostri</p>
             </div>
             <div class="content-item">
                 <a href="#" alt="5 zile in Reykjavik">
-                    <img src="circle.jpg"/>
+                    <img src="../poze_index/circle.jpg"/>
                 </a>
                 <p>Impresii de calatorie</p>
             </div>
