--- a/reykjavik.html
+++ b/reykjavik.html
@@ -40,7 +40,7 @@
                 (vara, Flybus te duce de la aeroport la Blue Lagoon, dar cursa nu este operata tot timpul iarna). 
                 La Blue Lagoon ai posibilitatea de a-ti depozita bagajele.<br><br>
             </p>   
-            <img src="blue_lagoon.jpg" alt="imagine Blue Lagoon"/>
+            <img src="../poze_reykjavik/blue_lagoon2.jpg" alt="imagine Blue Lagoon"/>
             <p>
                 Daca mergi pe cont propriu in Islanda si esti cam stramtorat cu banii, e bine sa alegi o pensiune, unde atmosfera
                 e mult mai prietenoasa si unde ai si facilitati legate de bucatarie. Un astfel de exemplu este Our House, 
@@ -56,17 +56,14 @@
                 Camera dubla este 12000 ISK (aproximativ 100 dolari). Daca vrei o camera single, mergi la Pensiunea Sunna, putin mai sus pe aceeasi strada. Ca si la Our House, 
                 micul dejun si Internetul sunt incluse in pret, baia este comuna si exista si 
                 facilitati legate de bucatarie, desi atmosfera e mult mai intima.
-                Pretul camerelor pleaca de la 6700 kronur (in jur de 61 de dolari).<br><br>
-                Ziua 1:Odata ce te-ai cazat, incepe prin a-ti fixa niste repere. 
-                Nu exista modalitate mai buna pentru a face asta decat sa te urci
-                pe puntea de observatie de la Hallgrimskirkja, sau “biserica alba” 
-                asa cum este cunoscuta de multi. De aici vei vedea aproape tot ce exista 
-                in oras si atat timp cat poti gasi drumul de acolo la hotel, nu te vei 
-                rataci niciodata in Reykjavik. Poti intra in biserica si poti lua liftul 
+                Pretul camerelor pleaca de la 6700 kronur (in jur de 61 de dolari).
+            </p>
+            <p> <span id="ziua">Ziua 1: </span>Odata ce te-ai cazat, incepe prin a-ti fixa niste repere. Nu exista modalitate mai buna pentru a face asta decat sa te urci
+                pe puntea de observatie de la Hallgrimskirkja, sau “biserica alba” asa cum este cunoscuta de multi. De aici vei vedea aproape tot ce exista 
+                in oras si atat timp cat poti gasi drumul de acolo la hotel, nu te vei rataci niciodata in Reykjavik. Poti intra in biserica si poti lua liftul 
                 pana in varf, pentru a admira panorama orasului.
-            </p> <br><br>
+            </p> 
             <img src="../poze_reykjavik/biserica_reper.jpg" alt="biserica"/>
-            <p>Hallgrimskirkja, biserica-reper a Reykjavikului</p>
             <p>Dupa aceea, fa o plimbare pana la sculptura Solfar (calatorul soarelui), aflata pe faleza si mergi mai departe pana in port, unde poti servi pranzul 
                 la Icelandic Fish and Chips, sau te poti incalzi cu un castron cu supa 
                 fierbinte de rac, la Sægreifinn (baronul marii).  De acolo poti merge pana
@@ -76,28 +73,23 @@
                 ia-o in sus catre Bankastraeti, care da in Laugavegur, principala 
                 artera comerciala. Daca vrei sa faci cumparaturi pentru cina, opreste-te la bacania Bonus.
             </p>
-            <p>
-                Ziua 2:
+            <p><span id="ziua">Ziua 2: </span>
                 O zi minunata pentru activitati in aer liber. Planifica-ti niste scufundari in cele mai limpezi ape din lume, la Silfra in Thingvellir (dar ai grija sa iti iei un costum calduros pentru a face fata temperaturilor scazute din apa) sau calareste un cal islandez. Agentiile de turism se vor ocupa de toate detaliile, inclusiv de preluarea ta, iar multe tururi pot fi combinate pentru a face economie de timp. De exemplu, poti aranja sa faci calarie si sa combini acest lucru cu o excursie la Blue Lagoon sau la Geysir si Gullfoss, doua dintre cele mai populare atractii turistice din tara.
             </p>
             <img src="../poze_reykjavik/cai-islandezi.jpg" alt="cai"/>
-            <p>Ziua 3:
+            <p><span id="ziua">Ziua 3: </span>
                 Daca ti-ai facut deja prieteni la pensiune sau nu calatoresti singur, imparte costul inchirierii unei masini si mergeti sa faceti turul Golden Circle. Chiar daca ai numai un insotitor, cheltuirea a 100 de dolari pentru inchirierea unei masini cu cutie de viteza automata (inclusiv asigurarea), va fi o operatiune mai avantajoasa decat sa dai 9800 ISK (aproximativ 89 dolari) pentru un tur al Golden Circle. Drumurile pana acolo sunt bine intretinute si daca nu vine vreo furtuna, calatoria va fi chiar placuta. In plus, masina iti ofera libertatea de a opri cand vrei si de a te odihni dupa pofta inimii. Dupa o zi de explorari turistice, s-ar putea sa tanjesti dupa o bere si sa te tenteze un tur al Ölgerðin, cea mai veche berarie din Islanda. Turul Taste the Saga organizat de agentia Gray Line este unul dintre cele mai complete; aici vei afla nu numai lucruri interesante despre istoria bauturii din Islanda, dar si despre cultura acestei activitati. In plus, ai sansa sa degusti cateva tipuri de bere, precum si bauturi traditionale: Applesin, Malt si Brennivin.
                 Dupa tur, rasfata-te cu o cina savuroasa, inainte de a merge in cateva cluburi din oras. O locatie renumita este Fishmarket, un restaurant elegant care serveste specialitati islandeze, cu influente asiatice – crabii la gratar cu sos chili (3900 ISK, adica in jur de 35  de dolari)  sau langustina de 6900 ISK  de la Vestmannaeyjar. Daca e prea scump pentru tine, exista multe alte locatii ieftine, precum Tapas Barinn, unde poti savura portii mai mici, la preturi si ele mici.
             </p>
             <img src="../poze_reykjavik/golden-circle.jpg" alt="golden circle"/>
-            <p>Ziua 4: Presupunand ca ai stat ceva mai mult treaz azi-noapte si vrei s-o iei mai incet astazi, ar fi bine sa stai pe langa Reykjavik. Relaxeaza-te intr-una dintre piscinele publice, fa o plimbare cu bicicleta prin oras, daca vremea e frumoasa sau fa niste  cumparaturi in  piata de vechituri Kolaportið, care se organizeaza langa port, la fiecare sfarsit de saptamana. Daca esti in cautarea unui pulover islandez, aici il vei gasi mult mai ieftin decat in magazinele de suveniruri.
+            <p><span id="ziua">Ziua 4: </span>Presupunand ca ai stat ceva mai mult treaz azi-noapte si vrei s-o iei mai incet astazi, ar fi bine sa stai pe langa Reykjavik. Relaxeaza-te intr-una dintre piscinele publice, fa o plimbare cu bicicleta prin oras, daca vremea e frumoasa sau fa niste  cumparaturi in  piata de vechituri Kolaportið, care se organizeaza langa port, la fiecare sfarsit de saptamana. Daca esti in cautarea unui pulover islandez, aici il vei gasi mult mai ieftin decat in magazinele de suveniruri.
                Daca ai bani de cheltuit, cumpara niste haine de calitate de la magazinul 66° North sau mergi in centrul comercial Kringlan. Poti apela la cei de la My Reykjavik, o companie care organizeaza cele mai bune tururi ale orasului. Acestea au loc in fiecare zi in timpul verii si la cerere pe timpul iernii si sunt gratuite.  Dupa-amiaza, fa o vizita in unele dintre muzeele orasului, pentru a invata mai multe despre istoria si cultura acestei tari.  Muzeul 871 +/- Settlement este favoritul multora, iar daca este miercuri, este cea mai buna zi pentru a vizita Casa de Cultura, intrucat intrarea este libera.
             </p>
             <img src="../poze_reykjavik/reykjavik4.jpg" alt="reykjavik"/>
-            <p>
-            Ziua 5:
-            Astazi, paraseste din nou orasul si participa la una dintre numeroasele excursii de o zi ce pleaca din Reykjavik. Fa o plimbare pe un ghetar, escaladeaza gheata, mergi pana la vulcanul Eyjafjallyokull, mergi cu o sanie trasa de caini, exploreaza pesterile formate de raurile de lava, mergi cu snowmobilul sau invata sa conduci un Super Jeep pe drumurile acoperite de zapada si peste raurile inghetate.
+            <p><span id="ziua">Ziua 5: </span>Astazi, paraseste din nou orasul si participa la una dintre numeroasele excursii de o zi ce pleaca din Reykjavik. Fa o plimbare pe un ghetar, escaladeaza gheata, mergi pana la vulcanul Eyjafjallyokull, mergi cu o sanie trasa de caini, exploreaza pesterile formate de raurile de lava, mergi cu snowmobilul sau invata sa conduci un Super Jeep pe drumurile acoperite de zapada si peste raurile inghetate.
             </p>
             <img src="../poze_reykjavik/peisaj.jpg" alt="peisaj"/>
-            <p>
-            Ziua 6:
-            Majoritatea zborurilor catre casa pleaca dupa-amiaza din Aeroportul Keflavik. Acesta este mic iar controlul de securitate nu dureaza mult, asa ca 90 de minute inaintea zborului iti sunt suficiente pentru indeplinirea tuturor formalitatilor. Prin urmare, dimineata iti ramane timp pentru a mai vizita ceva in Reykjavik sau sa pentru a iti mai planifica o ultima excursie. Daca nu ai ajuns inca in  Blue Lagoon, mergi in ziua plecarii, inainte de a ajunge la aeroport.
+            <p><span id="ziua">Ziua 6: </span>Majoritatea zborurilor catre casa pleaca dupa-amiaza din Aeroportul Keflavik. Acesta este mic iar controlul de securitate nu dureaza mult, asa ca 90 de minute inaintea zborului iti sunt suficiente pentru indeplinirea tuturor formalitatilor. Prin urmare, dimineata iti ramane timp pentru a mai vizita ceva in Reykjavik sau sa pentru a iti mai planifica o ultima excursie. Daca nu ai ajuns inca in  Blue Lagoon, mergi in ziua plecarii, inainte de a ajunge la aeroport.
             Autobuzele Flybus se iau de la statia BSI, care se afla la 10-15 minute de centrul orasului si ajung chiar la Blue Lagoon. Daca iei autobuzul de la ora 11, vei ajunge acolo la 11.45 si vei avea la dispozitie 2 ore pentru a te relaxa inainte de a te imbarca in autobuzul care pleaca la 14.15 spre Keflavik, ajungand cam cu 2 ore si jumatate inainte de un zbor care pleaca la ora 17 de exemplu. Asta inseamna ca vei avea timp pentru o gustare, pentru a mai cheltui niste bani in duty-free si pentru a te relaxa inainte de zborul spre casa.
             </p>
         </main>
