--- a/reykjavik.html
+++ b/reykjavik.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Descopera Reykjavik</title>
     <link rel="stylesheet" href="reykjavik.css"/>
+    <link rel="icon" type="image/x-icon" href="../poze_index/flag.jpg"/>
 </head>
 <body>
     <div class="wrapper">
