--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <header>
         <nav id="nav">
-            <a href="#" class="menu-item">descopera</a>
-            <a href="#" class="menu-item">calatorie</a>
+            <a href="descopera.html" class="menu-item">descopera</a>
+            <a href="#" class="menu-item">impresii</a>
             <a href="#" class="menu-item">recomandari</a>
         </nav>
         <h1>Descopera</h1>
