--- a/reykjavik.html
+++ b/reykjavik.html
@@ -13,6 +13,7 @@
         <header>
             <nav>
                 <a href="index.html" class="menu-item">acasa</a>
+                <a href="descopera.html" class="menu-item">descopera</a>
             </nav>
             <h1>Descopera</h1>
             <h2>Reykjavik</h2>
