add image description

--- a/descopera.html
+++ b/descopera.html
@@ -12,8 +12,8 @@
     <header>
         <nav id="nav">
             <a href="index.html" class="menu-item">acasa</a>
-            <a href="#" class="menu-item">calatorie</a>
-            <a href="#" class="menu-item">recomandari</a>
+            <a href="reykjavik.html" class="menu-item">reykjavik</a>
+            <a href="reykjavik.html" class="menu-item">recomandari</a>
         </nav>
         <h1>Descopera</h1>
         <h2>Islanda</h2>
