--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav id="nav">
             <a href="descopera.html" class="menu-item">descopera</a>
             <a href="#" class="menu-item">impresii</a>
-            <a href="#" class="menu-item">recomandari</a>
+            <a href="reykjavik.html" class="menu-item">recomandari</a>
         </nav>
         <h1>Descopera</h1>
         <h2>Islanda</h2>
@@ -47,31 +47,31 @@
                 <p>Cum sa petreci 5 zile de neuitat in Reykjavik</p>
             </div>
             <div class="content-item">
-                <a href="#" alt="5 zile in Reykjavik">
+                <a href="descopera.html" alt="de ce ne place noua Islanda">
                     <img src="../poze_index/islanda_imagine11.jpg"/>
                 </a>
                 <p>De ce ne place noua Islanda</p>
             </div>
             <div class="content-item">
-                <a href="#" alt="5 zile in Reykjavik">
+                <a href="reykjavik.html" alt="ce iti recomandam">
                     <img src="../poze_index/blue_lagoon.jpg"/>
                 </a>
                 <p>Ce iti recomandam</p>
             </div>
             <div class="content-item">
-                <a href="#" alt="5 zile in Reykjavik">
+                <a href="reykjavik.html" alt="ce ai de vizitat">
                     <img src="../poze_index/cascada.jpg"/>
                 </a>
                 <p>Ce ai de vizitat</p>
             </div>
             <div class="content-item">
-                <a href="#" alt="5 zile in Reykjavik">
+                <a href="descopera.html" alt="prin ochii nostri">
                     <img src="../poze_index/prin_ochii_nostri.jpg"/>
                 </a>
                 <p>Prin ochii nostri</p>
             </div>
             <div class="content-item">
-                <a href="#" alt="5 zile in Reykjavik">
+                <a href="reykjavik.html" alt="impresii de calatorie">
                     <img src="../poze_index/circle.jpg"/>
                 </a>
                 <p>Impresii de calatorie</p>
