--- a/reykjavik.html
+++ b/reykjavik.html
@@ -95,7 +95,7 @@
         </main>
         <footer>
             <p class="footer-text"> © Copyright 2023 
-                designed with <span style="color:red">&#10084;</span> by Diana
+                designed with <span id="heart" style="color:red">&#10084;</span> by Diana
             </p>
         </footer>
     </div>
