change font size

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav id="nav">
             <a href="descopera.html" class="menu-item">descopera</a>
-            <a href="#" class="menu-item">impresii</a>
+            <a href="reykjavik.html" class="menu-item">impresii</a>
             <a href="reykjavik.html" class="menu-item">recomandari</a>
         </nav>
         <h1>Descopera</h1>
