--- a/reykjavik.html
+++ b/reykjavik.html
@@ -14,6 +14,7 @@
             <nav>
                 <a href="index.html" class="menu-item">acasa</a>
                 <a href="descopera.html" class="menu-item">descopera</a>
+                <a href="descopera.html" class="menu-item">impresii</a>
             </nav>
             <h1>Descopera</h1>
             <h2>Reykjavik</h2>
